snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.sha1
12d0abef710ad2df62370ed5f7b3c411845c8b2e